# pg_background

./: .editorconfig  .gitignore  CI.md  CONTRIBUTING.md  DELIVERABLES.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_v1.7.md  ISSUES_AND_SUGGESTIONS.md  Makefile  NEWREADME.md  PROPOSED_CHANGES.md  README.md  README.old.md  RELEASE_NOTES_v1.6.md  REVIEW.md  REVIEW_FINDINGS.md  REVIEW_SUMMARY.md  SECURITY.md  SUMMARY.md  TOP_DIFFS.md  pg_background--1.0--1.1.sql  pg_background--1.0--1.2.sql  pg_background--1.0--1.3.sql  pg_background--1.0.sql  pg_background--1.1--1.2.sql  pg_background--1.1--1.4.sql  pg_background--1.1.sql  pg_background--1.3.sql  pg_background--1.4--1.5.sql  pg_background--1.4--1.6.sql  pg_background--1.4.sql  pg_background--1.5--1.6.sql  pg_background--1.5.sql  pg_background--1.6--1.7.sql  pg_background--1.6.sql  pg_background--1.7--1.8.sql  pg_background--1.7.sql  pg_background--1.8.sql  pg_background.bc  (+6 more)
.github/workflows/: ci.yml
expected/: pg_background.out  pg_background_1.out
results/: pg_background.out
sql/: notify_test.sql  pg_background.sql  pg_background_relocatable.sql
windows/: ReadMe.md  pg_background_win.h
windows/vs2010/: pg_background.sln  pg_background.vcxproj  pg_background.vcxproj.filters
windows/vs2017/: ReadMe.md  pg_background.sln  pg_background.vcxproj  pg_background.vcxproj.filters
windows/vscmake/: CMakeLists.txt  CMakeSettings.json  ReadMe.md
